# pass-culture-api-wrapper

./: README.md  pyproject.toml
pass-culture/: __init__.py  client.py
pass-culture/endpoints/: __init__.py  base.py  bookings.py
pass-culture/models/: __init__.py  bookings.py  common.py
pass_culture/: __init__.py  client.py  config.py  exceptions.py
pass_culture/endpoints/: EventOffers.py  PriceCategories.py  __init__.py  bookings.py
pass_culture/models/: AccessibilityInfo.py  CategoryRelatedFields.py  EventOffers.py  ImageBody.py  LocationInfo.py  PriceCategory.py  __init__.py  bookings.py
